--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
@@ -19,6 +20,7 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "jest": "^29.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -35,8 +37,13 @@
     "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react-native-vector-icons": "^6.4.18"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@testing-library/jest-native": "5.4.3",
+    "@testing-library/react-native": "^12.8.1",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "jest-expo": "^51.0.4",
+    "ts-node": "^10.9.2"
   },
   "private": true
 }
