--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,6 @@ jobs:
           -H "Content-Type: application/json" \
           -d '{
                 "token": "'"${{ secrets.WHATSAPP_TOKEN }}"'",
-                "to": "whatsapp:%2B51989160593",
+                "to": "whatsapp:+51989160593",
                 "body": "La compilación de Android para Virgen-Natividad-App fue exitosa y está lista para revisión en Expo."
               }'
