--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^11.0.1",
     "jest": "^29.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
