--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@stripe/stripe-react-native": "0.37.2",
     "@types/react": "~18.2.79",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
@@ -35,8 +36,7 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-ui-datepicker": "^2.0.4",
-    "react-native-web": "~0.19.10",
-    "typescript": "~5.3.3"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
