--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
+    "@stripe/stripe-react-native": "0.37.2",
     "@types/react": "~18.2.79",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
