--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-logs": "^5.3.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.12.5",
     "react-native-radio-buttons-group": "^3.1.0",
