--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,20 @@ jobs:
       - name: Run unit tests
         run: npm test
 
+      - name: Run SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@v2
+        with:
+          args: |
+            -Dsonar.projectKey=virgen_natividad_app
+            -Dsonar.projectName=Virgen Natividad App
+            -Dsonar.projectVersion=1.0
+            -Dsonar.sources=src
+            -Dsonar.language=js
+            -Dsonar.sourceEncoding=UTF-8
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
   build-android:
     runs-on: ubuntu-latest
     needs: build-and-test
